test/e2e/conformance/tests/httproute-eureka-registry.yaml
# Copyright (c) 2022 Alibaba Group Holding Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: networking.higress.io/v1
kind: McpBridge
metadata:
  name: eureka-registry-provider
  namespace: higress-conformance-infra
spec:
  registries:
    - domain: eureka.higress-conformance-infra.svc.cluster.local
      name: eureka
      port: 8761
      type: eureka
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    higress.io/destination: eureka-registry-provider.eureka
  name: httproute-eureka-ingress
  namespace: higress-conformance-infra
spec:
  ingressClassName: higress
  rules:
    - host: "bar.com"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              resource:
                apiGroup: networking.higress.io
                kind: McpBridge
                name: eureka-registry-provider
